--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.xyzreader"
     android:versionCode="1"
     android:versionName="1.0">
 
+    <!-- normal level permissions automatically granted -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
@@ -14,6 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Bacon">
 
+        <!-- launch article list -->
         <activity
             android:name=".ui.ArticleListActivity"
             android:label="@string/app_name">
@@ -23,17 +27,19 @@
             </intent-filter>
         </activity>
 
+        <!-- article details called from article list -->
         <activity
             android:name=".ui.ArticleDetailActivity"
             android:parentActivityName=".ui.ArticleListActivity">
-            <intent-filter>
+
+            <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="vnd.android.cursor.item/vnd.com.example.xyzreader.items" />
             </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.ArticleListActivity" />
+                android:value="PsiClass:ArticleListActivity" />
         </activity>
 
         <service android:name=".data.UpdaterService"
