fix: Resolve error in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="PsiClass:ArticleListActivity" />
+                android:value=".ui.ArticleListActivity" />
         </activity>
 
         <service android:name=".data.UpdaterService"
